src/objects/TimeRecordControl__c.object
<CustomObject>
    <fields>
        <fullName>BreakRange__c</fullName>
        <formula>IF(
(((HOUR(FirstBreakEnd__c ) - HOUR(FirstBreakStart__c)) + 
((MINUTE(FirstBreakEnd__c ) - MINUTE(FirstBreakStart__c ))/60))+
((HOUR(SecondBreakEnd__c) - HOUR(SecondBreakStart__c)) + 
((MINUTE(FirstBreakEnd__c ) - MINUTE(FirstBreakStart__c ))/60))+
((HOUR(ThirdBreakEnd__c) - HOUR(ThirdBreakStart__c)) + 
((MINUTE(ThirdBreakEnd__c) - MINUTE(ThirdBreakStart__c))/60)))&gt;0.25
,(((HOUR(FirstBreakEnd__c ) - HOUR(FirstBreakStart__c)) + 
((MINUTE(FirstBreakEnd__c ) - MINUTE(FirstBreakStart__c ))/60))+
((HOUR(SecondBreakEnd__c) - HOUR(SecondBreakStart__c)) + 
((MINUTE(FirstBreakEnd__c ) - MINUTE(FirstBreakStart__c ))/60))+
((HOUR(ThirdBreakEnd__c) - HOUR(ThirdBreakStart__c)) + 
((MINUTE(ThirdBreakEnd__c) - MINUTE(ThirdBreakStart__c))/60)))-0.25, 
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración descansos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentiousCause__c</fullName>
        <label>Motivo discrepancia</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeHasLeftWorkplace__c</fullName>
        <formula>IF(
(LEFT(TEXT( GeolocationOnCheckEndWorkingHours__Latitude__s ), 6) &lt;&gt; LEFT(TEXT( StartWorkingHoursGeolocation__Latitude__s ), 6)) &amp;&amp;
(LEFT(TEXT( GeolocationOnCheckEndWorkingHours__Longitude__s ), 6) &lt;&gt; LEFT(TEXT( StartWorkingHoursGeolocation__Longitude__s ), 6)) &amp;&amp; TIMENOW() = TimeEndWorkingHoursControl__c ,
TRUE,
FALSE)</formula>
        <label>Validación correcta abandono sede</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstBreakEnd__c</fullName>
        <label>Fin del primer descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FirstBreakStart__c</fullName>
        <label>Inicio del primer descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FirstCheckInsertion__c</fullName>
        <label>Hora inserción primer control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FirstCheckTime__c</fullName>
        <label>Hora solicitud primer control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>GeolocationOnCheckEndWorkingHours__c</fullName>
        <label>Ubicación al comprobar fin de jornada</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IsCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es copia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaunchFinish__c</fullName>
        <label>Fin de comida</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>LaunchRange__c</fullName>
        <formula>IF((HOUR(LaunchFinish__c ) - HOUR(LaunchStart__c )) + ((MINUTE(LaunchFinish__c ) - MINUTE(LaunchStart__c ))/60)&gt;1.00, (HOUR(LaunchFinish__c ) - HOUR(LaunchStart__c )) + ((MINUTE(LaunchFinish__c ) - MINUTE(LaunchStart__c ))/60),1.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración de comida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaunchStart__c</fullName>
        <label>Inicio de comida</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>OvertimeCheckControls__c</fullName>
        <formula>IF(
((HOUR(FirstCheckInsertion__c) - HOUR(FirstCheckTime__c))+(MINUTE(FirstCheckInsertion__c)-MINUTE(FirstCheckTime__c))/60)&gt;0.1, 
(HOUR(FirstCheckInsertion__c) - HOUR(FirstCheckTime__c))+(MINUTE(FirstCheckInsertion__c)-MINUTE(FirstCheckTime__c))/60,
0)+
IF(
((HOUR(SecondCheckInsertion__c ) - HOUR(SecondCheckTime__c))+(MINUTE(SecondCheckInsertion__c )-MINUTE(SecondCheckTime__c))/60)&gt;0.1, 
(HOUR(SecondCheckInsertion__c ) - HOUR(SecondCheckTime__c))+(MINUTE(SecondCheckInsertion__c )-MINUTE(SecondCheckTime__c))/60,
0)+
IF(
((HOUR(ThirdCheckInsertion__c ) - HOUR(ThirdCheckTime__c ))+(MINUTE(ThirdCheckInsertion__c )-MINUTE(ThirdCheckTime__c ))/60)&gt;0.1,
(HOUR(ThirdCheckInsertion__c ) - HOUR(ThirdCheckTime__c ))+(MINUTE(ThirdCheckInsertion__c )-MINUTE(ThirdCheckTime__c ))/60,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceso en inserción códigos de control</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordDate__c</fullName>
        <label>Fecha de registro</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordedByCompany__c</fullName>
        <label>Registrado por compañía</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondBreakEnd__c</fullName>
        <label>Fin del segundo descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>SecondBreakStart__c</fullName>
        <label>Inicio del segundo descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>SecondCheckInsertion__c</fullName>
        <label>Hora inserción segundo control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>SecondCheckTime__c</fullName>
        <label>Hora solicitud segundo control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>SelectedEndWorkingHours__c</fullName>
        <label>Hora marcada fin de trabajo</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>StarWorkingTime__c</fullName>
        <label>Hora de inicio de trabajo</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>StartWorkingHoursGeolocation__c</fullName>
        <label>Ubicación al iniciar jornada</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Estado del registro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aceptado</fullName>
                </value>
                <value>
                    <fullName>Fraudulento</fullName>
                </value>
                <value>
                    <fullName>Inspeccionar</fullName>
                </value>
                <value>
                    <fullName>Contencioso</fullName>
                </value>
                <value>
                    <fullName>Resuelto Recursos Humanos</fullName>
                </value>
                <value>
                    <fullName>Resuelto Inspección</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThirdBreakEnd__c</fullName>
        <label>Fin del tercer descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ThirdBreakStart__c</fullName>
        <label>Inicio del tercer descanso</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ThirdCheckInsertion__c</fullName>
        <label>Hora inserción tercer control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ThirdCheckTime__c</fullName>
        <label>Hora solicitud tercer control</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TimeEndWorkingHoursControl__c</fullName>
        <formula>SelectedEndWorkingHours__c +(0.5/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora de comprobación fin de trabajo</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TimeRecordControlId__c</fullName>
        <label>Registro de control mensual</label>
        <referenceTo>MonthlyTimeRecordControl__c</referenceTo>
        <relationshipLabel>Registros de control</relationshipLabel>
        <relationshipName>TimeRecordControls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isTeleworking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teletrabajo</label>
        <type>Checkbox</type>
    </fields>
    <label>Registro de control</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Referencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>